# krx-toolkit

./: AGENTS.md  Cargo.toml  market_open  rustfmt.toml
data/master/: master_stock_kosdaq.json  master_stock_kospi.json
src/: app.rs  constants.rs  main.rs  theme.rs  utils.rs
src/api/: mod.rs
src/api/kiwoom/: error.rs  http.rs  mod.rs  route.rs  types.rs  ws.rs
src/app/: control_panel.rs  mod.rs  order_normal.rs  order_tool.rs  viewport.rs
src/tasks/: mod.rs  rest_task.rs  ws_task.rs
src/widgets/: mod.rs  ticker_search.rs
