[package]
name = "krx-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
eframe = "0.33.3"
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
puffin = "0.19.1"
puffin_http = "0.16.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2.5.8"
